@@ -5,7 +5,6 @@ import org.freedesktop.dbus.connections.transports.IFileBasedBusAddress;
 import org.freedesktop.dbus.utils.Util;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.attribute.PosixFilePermission;
 import java.util.Set;
 
@@ -28,7 +27,7 @@ public class JUnixSocketBusAddress extends BusAddress implements IFileBasedBusAd
     }
 
     public Path getPath() {
-        return Paths.get(getParameterValue("path"));
+        return Path.of(getParameterValue("path"));
     }
 
     @Override
